update poms